[package]
name = "rsp-rs"
version = "0.1.0"
edition = "2021"
authors = ["Kush Bisen <mailkushbisen@gmail.com>"]
description = "A RDF Stream Processing engine in Rust, supporting RSP-QL queries with sliding windows and real-time analytics"
license = "MIT"
repository = "https://github.com/argahsuknesib/rsp-rs"
keywords = ["rdf", "sparql", "stream-processing", "rsp-ql", "real-time"]
categories = ["database", "asynchronous", "data-structures"]
documentation = "https://docs.rs/rsp-rs"
homepage = "https://github.com/argahsuknesib/rsp-rs"

[dependencies]
oxigraph = "0.4"  # For RDF and SPARQL
tokio = { version = "1", features = ["full"] }  # For async streams
async-trait = "0.1"  # For async traits
regex = "1"  # For regular expression parsing
