[package]
name = "rsp-rs"
version = "0.2.0"
edition = "2024"
authors = ["Kush Bisen <mailkushbisen@gmail.com>"]
description = "A RDF Stream Processing engine in Rust, supporting RSP-QL queries with sliding windows and real-time analytics"
license = "MIT"
repository = "https://github.com/argahsuknesib/rsp-rs"
keywords = ["rdf", "sparql", "stream-processing", "rsp-ql", "real-time"]
categories = ["database", "asynchronous", "data-structures"]
documentation = "https://docs.rs/rsp-rs"
homepage = "https://github.com/argahsuknesib/rsp-rs"

[dependencies]
oxigraph = "0.5"  # For RDF and SPARQL
regex = "1"  # For regular expression parsing

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }  # For benchmarking
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }  # For CPU profiling
sysinfo = "0.31"  # For CPU and memory metrics
num_cpus = "1.16"  # For CPU count detection

[[bench]]
name = "streaming_throughput"
harness = false

[[bench]]
name = "memory_profile"
harness = false

[[bench]]
name = "cpu_utilization"
harness = false

[[bench]]
name = "r2r_operator"
harness = false
